增强文件管理模块，支持多种格式编辑及编码自动识别，新增管理员文件编辑接口